# TFG_backend

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  doc.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  database.py
app/api/: __init__.py  chat.py  routes.py
app/models/: __init__.py  admin.py  research.py  user.py
app/schemas/: __init__.py  admin.py  chat.py  research.py  user.py
app/services/: __init__.py  admin_service.py  llm.py  research_service.py
app/utils/: __init__.py
db/: init.sql
docs/: actual_schema.json
tests/: test_chat.py  test_validation.py
