[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "jsonschema>=4.23",
    "cryptography>=46.0.5",
    "openai>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.27",
    "ruff>=0.15.7",
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (unused imports, variables)
    "I",     # isort (import ordering)
    "UP",    # pyupgrade (modern Python syntax)
    "B",     # flake8-bugbear (common bugs)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "B008",  # Depends() en defaults — patrón estándar de FastAPI
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
